// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service actions should create START_SERVICE_AUDIT_LOADING and END_SERVICE_AUDIT_LOADING 1`] = `
Array [
  Object {
    "limit": 20,
    "offset": 0,
    "serviceId": "yandex_afisha",
    "type": "START_SERVICE_AUDIT_LOADING",
  },
  Object {
    "audit": Object {
      "items": Array [
        Object {
          "action": "config_active",
          "date": "Mon, 12 Feb 2018 16:19:23 GMT",
          "id": 1,
          "params": Object {
            "config_comment": "wertwer",
            "config_id": 3,
            "old_config_id": 1,
          },
          "service_id": "yandex_afisha",
          "user_id": 204409962,
        },
        Object {
          "action": "config_test",
          "date": "Mon, 12 Feb 2018 16:46:39 GMT",
          "id": 2,
          "params": Object {
            "config_comment": "Initial config",
            "config_id": 1,
            "old_config_id": null,
          },
          "service_id": "yandex_afisha",
          "user_id": 204409962,
        },
        Object {
          "action": "config_active",
          "date": "Mon, 12 Feb 2018 16:51:53 GMT",
          "id": 3,
          "params": Object {
            "config_comment": "Initial config",
            "config_id": 1,
            "old_config_id": 3,
          },
          "service_id": "yandex_afisha",
          "user_id": 204409962,
        },
        Object {
          "action": "config_test",
          "date": "Mon, 12 Feb 2018 16:56:02 GMT",
          "id": 4,
          "params": Object {
            "config_comment": "wertwer",
            "config_id": 3,
            "old_config_id": null,
          },
          "service_id": "yandex_afisha",
          "user_id": 204409962,
        },
        Object {
          "action": "config_active",
          "date": "Mon, 12 Feb 2018 16:57:02 GMT",
          "id": 5,
          "params": Object {
            "config_comment": "wertwer",
            "config_id": 3,
            "old_config_id": 1,
          },
          "service_id": "yandex_afisha",
          "user_id": 204409962,
        },
        Object {
          "action": "config_test",
          "date": "Mon, 12 Feb 2018 17:18:51 GMT",
          "id": 6,
          "params": Object {
            "config_comment": "Initial config",
            "config_id": 1,
            "old_config_id": null,
          },
          "service_id": "yandex_afisha",
          "user_id": 204409962,
        },
      ],
      "total": 6,
    },
    "serviceId": "yandex_afisha",
    "type": "END_SERVICE_AUDIT_LOADING",
  },
]
`;

exports[`service actions should create START_SERVICE_AUDIT_LOADING and SET_ERRORS 1`] = `
Array [
  Object {
    "limit": 20,
    "offset": 0,
    "serviceId": "yandex_afisha",
    "type": "START_SERVICE_AUDIT_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_CONFIG_APPLYING and END_SERVICE_CONFIG_APPLYING with target=active 1`] = `
Array [
  Object {
    "configId": 234,
    "labelId": 123,
    "options": Object {
      "oldConfigId": 235,
      "target": "active",
    },
    "type": "START_SERVICE_CONFIG_APPLYING",
  },
  Object {
    "configId": 234,
    "labelId": 123,
    "options": Object {
      "oldConfigId": 235,
      "target": "active",
    },
    "type": "END_SERVICE_CONFIG_APPLYING",
  },
]
`;

exports[`service actions should create START_SERVICE_CONFIG_APPLYING and SET_ERRORS with target=active 1`] = `
Array [
  Object {
    "configId": 234,
    "labelId": 123,
    "options": Object {
      "oldConfigId": 235,
      "target": "active",
    },
    "type": "START_SERVICE_CONFIG_APPLYING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_CONFIG_ARCHIVED_SETTING and END_SERVICE_CONFIG_ARCHIVED_SETTING 1`] = `
Array [
  Object {
    "archived": true,
    "configId": 345,
    "serviceId": "yandex_afisha",
    "type": "START_SERVICE_CONFIG_ARCHIVED_SETTING",
  },
  Object {
    "archived": true,
    "configId": 345,
    "serviceId": "yandex_afisha",
    "type": "END_SERVICE_CONFIG_ARCHIVED_SETTING",
  },
]
`;

exports[`service actions should create START_SERVICE_CONFIG_ARCHIVED_SETTING and SET_ERRORS 1`] = `
Array [
  Object {
    "archived": true,
    "configId": 345,
    "serviceId": "yandex_afisha",
    "type": "START_SERVICE_CONFIG_ARCHIVED_SETTING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_CONFIG_LOADING and END_SERVICE_CONFIG_LOADING 1`] = `
Array [
  Object {
    "configId": 456,
    "serviceId": 123,
    "type": "START_SERVICE_CONFIG_LOADING",
  },
  Object {
    "config": Object {
      "comment": "stand alone a config",
      "date": "2018-01-10T11:12:13",
      "id": 456,
      "status": "inactive",
    },
    "configId": 456,
    "serviceId": 123,
    "type": "END_SERVICE_CONFIG_LOADING",
  },
]
`;

exports[`service actions should create START_SERVICE_CONFIGS_LOADING and END_SERVICE_CONFIGS_LOADING 1`] = `
Array [
  Object {
    "labelId": 123,
    "limit": 20,
    "offset": 0,
    "type": "START_SERVICE_CONFIGS_LOADING",
  },
  Object {
    "configs": Object {
      "items": Array [
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 234,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "preview",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 235,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 236,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "preview",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 237,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "preview",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 238,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 239,
          "statuses": Array [],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 240,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 241,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 242,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 243,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 244,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "preview",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 245,
          "statuses": Array [],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 246,
          "statuses": Array [],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 247,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 248,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 249,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "preview",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 250,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 251,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 252,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
        Object {
          "comment": "made a config",
          "date": "2018-01-10T11:12:13",
          "id": 253,
          "statuses": Array [
            Object {
              "comment": "",
              "status": "active",
            },
          ],
        },
      ],
      "total": 60,
    },
    "labelId": 123,
    "type": "END_SERVICE_CONFIGS_LOADING",
  },
]
`;

exports[`service actions should create START_SERVICE_CONFIGS_LOADING and SET_ERRORS 1`] = `
Array [
  Object {
    "labelId": 123,
    "limit": 20,
    "offset": 0,
    "type": "START_SERVICE_CONFIGS_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_LOADING and END_SERVICE_CONFIG_LOADING 1`] = `
Array [
  Object {
    "serviceId": 123,
    "type": "START_SERVICE_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_LOADING and END_SERVICE_CONFIG_LOADING with empty data 1`] = `
Array [
  Object {
    "configId": 456,
    "serviceId": 123,
    "type": "START_SERVICE_CONFIG_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_LOADING and SET_ERRORS 1`] = `
Array [
  Object {
    "serviceId": 123,
    "type": "START_SERVICE_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_LOADING and SET_ERRORS 2`] = `
Array [
  Object {
    "configId": 456,
    "serviceId": 123,
    "type": "START_SERVICE_CONFIG_LOADING",
  },
  Object {
    "errors": Array [
      "Произошла ошибка. Попробуйте ещё раз.",
    ],
    "id": "global",
    "type": "SET_ERRORS",
  },
]
`;

exports[`service actions should create START_SERVICE_SETUP_LOADING and END_SERVICE_SETUP_LOADING 1`] = `
Array [
  Object {
    "serviceId": 123,
    "type": "START_SERVICE_SETUP_LOADING",
  },
  Object {
    "serviceId": 123,
    "setup": Object {
      "js_inline": "(func () { /* here goes awesome JS code */})(\\"<PARTNER-ID>\\")",
      "nginx_config": "here 
 goes 
 config",
      "token": "AABBCCDDEEFF....",
    },
    "type": "END_SERVICE_SETUP_LOADING",
  },
]
`;
